-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.4, 6.5, 6.6
-
None
-
-
9756f62a6 (dev), 7c2f495d2 (6.10), da806c69d (6.9)
Steps to reproduce:
- Create a LineEdit and set echo mode to password
Actual behavior:
- When you try to read characters with screenreader (here NVDA on Windows) "blank" is announce and you cannot see if edit field contains characters or not and know number of characters.
Expected behavior:
- Screenreader should announce the * character when navigating with arrow keys.
- relates to
-
QTBUG-120097 Screen Reader reads password in Password TextField
-
- Closed
-
| For Gerrit Dashboard: QTBUG-109599 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 653033,3 | QLineEdit a11y: Report displayText on a11y layer | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 653408,2 | QLineEdit a11y: Report displayText on a11y layer | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
| 653621,2 | QLineEdit a11y: Report displayText on a11y layer | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |